--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="./app.js" type="text/javascript"></script>
   <link rel="stylesheet" href="style.css">
-  <title>CPEN322 Project</title>
+  <title>Inventory Tracker</title>
 </head>
 
 <body>
